Source/WebCore/Modules/encryptedmedia/MediaKeySession.cpp
@@ -112,16 +112,9 @@ void MediaKeySession::keyRequestTimerFired(Timer<MediaKeySession>&)
             // 3.1. Create a new MediaKeyError object with the following attributes:
             //      code = the appropriate MediaKeyError code
             //      systemCode = a Key System-specific value, if provided, and 0 otherwise
-            RefPtr<MediaKeyError> error = MediaKeyError::create(errorCode, systemCode).get();
-
             // 3.2. Set the MediaKeySession object's error attribute to the error object created in the previous step.
-            setError(error.get());
-
             // 3.3. queue a task to fire a simple event named keyerror at the MediaKeySession object.
-            RefPtr<Event> event = Event::create(eventNames().webkitkeyerrorEvent, false, false);
-            event->setTarget(this);
-            m_asyncEventQueue.enqueueEvent(event.release());
-
+            sendError(errorCode, systemCode);
             // 3.4. Abort the task.
             continue;
         }
@@ -130,14 +123,7 @@ void MediaKeySession::keyRequestTimerFired(Timer<MediaKeySession>&)
         //    The event is of type MediaKeyMessageEvent and has:
         //    message = key request
         //    destinationURL = destinationURL
-        MediaKeyMessageEventInit init;
-        init.bubbles = false;
-        init.cancelable = false;
-        init.message = keyRequest;
-        init.destinationURL = destinationURL;
-        RefPtr<MediaKeyMessageEvent> event = MediaKeyMessageEvent::create(eventNames().webkitkeymessageEvent, init);
-        event->setTarget(this);
-        m_asyncEventQueue.enqueueEvent(event.release());
+        sendMessage(keyRequest.get(), destinationURL);
     }
 }
 
@@ -184,15 +170,8 @@ void MediaKeySession::addKeyTimerFired(Timer<MediaKeySession>&)
         //      The event is of type MediaKeyMessageEvent and has:
         //      message = next message
         //      destinationURL = null
-        if (nextMessage) {
-            MediaKeyMessageEventInit init;
-            init.bubbles = false;
-            init.cancelable = false;
-            init.message = nextMessage;
-            RefPtr<MediaKeyMessageEvent> event = MediaKeyMessageEvent::create(eventNames().webkitkeymessageEvent, init);
-            event->setTarget(this);
-            m_asyncEventQueue.enqueueEvent(event.release());
-        }
+        if (nextMessage)
+            sendMessage(nextMessage.get(), emptyString());
 
         // 2.7. If did store key is true, queue a task to fire a simple event named keyadded at the MediaKeySession object.
         if (didStoreKey) {
@@ -206,20 +185,35 @@ void MediaKeySession::addKeyTimerFired(Timer<MediaKeySession>&)
             // 2.8.1. Create a new MediaKeyError object with the following attributes:
             //        code = the appropriate MediaKeyError code
             //        systemCode = a Key System-specific value, if provided, and 0 otherwise
-            RefPtr<MediaKeyError> error = MediaKeyError::create(errorCode, systemCode).get();
-
             // 2.8.2. Set the MediaKeySession object's error attribute to the error object created in the previous step.
-            setError(error.get());
-
             // 2.8.3. queue a task to fire a simple event named keyerror at the MediaKeySession object.
-            RefPtr<Event> keyerrorEvent = Event::create(eventNames().webkitkeyerrorEvent, false, false);
-            keyerrorEvent->setTarget(this);
-            m_asyncEventQueue.enqueueEvent(keyerrorEvent.release());
-            
+            sendError(errorCode, systemCode);
             // 2.8.4. Abort the task.
             // NOTE: no-op
         }
     }
+}
+
+void MediaKeySession::sendMessage(Uint8Array* message, String destinationURL)
+{
+    MediaKeyMessageEventInit init;
+    init.bubbles = false;
+    init.cancelable = false;
+    init.message = message;
+    init.destinationURL = destinationURL;
+    RefPtr<MediaKeyMessageEvent> event = MediaKeyMessageEvent::create(eventNames().webkitkeymessageEvent, init);
+    event->setTarget(this);
+    m_asyncEventQueue.enqueueEvent(event.release());
+}
+
+void MediaKeySession::sendError(CDMSessionClient::MediaKeyErrorCode errorCode, unsigned long systemCode)
+{
+    RefPtr<MediaKeyError> error = MediaKeyError::create(errorCode, systemCode).get();
+    setError(error.get());
+
+    RefPtr<Event> keyerrorEvent = Event::create(eventNames().webkitkeyerrorEvent, false, false);
+    keyerrorEvent->setTarget(this);
+    m_asyncEventQueue.enqueueEvent(keyerrorEvent.release());
 }
 
 }
